
	* comm/tty_drv.c, comm/uart.c: Correct some minor cut and paste bugs.

2001-07-03	Mike Seirs <mike@poliac.com>

	* comm/tty_drv.c, comm/uart.c, comm/uart.h:  Adds the capability
	to use task driven serial I/O to ti386 BSPs. This patch leaves thex
	default I/O mode to be IRQ.  If you want to use task I/O mode,
	then the tty_drv.c file needs to be modified.  Basically, all
	you need to change is the data values of the termios callbacks
	structure.  This callback structure is used in the tty1_open
	and tty2_open functions.  The values you need to set are commented
	out in the source code. 

2001-06-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* comm/Makefile.am: Use *_HEADERS instead of *H_FILES.
	* io/Makefile.am: Ditto.
	* irq/Makefile.am: Ditto.
	* pci/Makefile.am: Ditto.

2000-10-19	Joel Sherrill <joel@OARcorp.com>

	* common/uart.h: Added prototype for BSP_uart_set_baud().

2000-10-19	   Charles-Antoine Gauthier <charles.gauthier@nrc.ca>

	* comm/uart.c (BSP_uart_init): Save more line state parameters.

2000-10-18	 Charles-Antoine Gauthier <charles.gauthier@nrc.ca>

	* comm/i386-stub-glue.c, comm/tty_drv.c, comm/uart.c, comm/uart.h:
	Add the ability to set parity, number of data bits and
	number of stop bits to the existing i386 serial drivers.

2000-10-17	Joel Sherrill <joel@OARcorp.com>

	* irq/idt.c, irq/Makefile.am: Moved idt.c to from libcpu/i386 so 
	i386 RTEMS can be multilib'ed.

2000-09-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* io/Makefile.am: Formatting.

2000-08-26  Rosimildo da Silva  <rdasilva@connecttel.com>

	* shared/comm: Added "/dev/ttyS1" & "/dev/ttyS2" support for
	the i386 BSPs.
	* shared/comm/gdb_glue.c: New file.
	* shared/comm/i386_io.c: New file.
	* shared/comm/tty_drv.c: New file.
	* shared/comm/tty_drv.h: New file.
	* shared/comm/Makefile.am: Account for new files.
	* shared/comm/uart.c: Adds support for sending characters to 
	another "line discipline."

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.